# onnxruntime-genai-private

./: CMakeLists.txt  README.md  export_phi3_moe.sh
.github/workflows/: linux-cpu-x64-build.yml  win-cpu-arm64-build.yml  win-cpu-x64-build.yml  win-gpu-x64-build.yml
.pipelines/stages/jobs/: py-linux-gpu-packaging-job.yml
benchmark/python/: benchmark_e2e.py
cmake/: set_variables.cmake
examples/csharp/HelloPhi2/: Program.cs
examples/gemma/: gemma.py
examples/gemma/model/: genai_config.json  tokenizer_config.json
examples/python/: model-chat.py  model-generate.py  model-qa.py  phi-3-tutorial.md  phi3-qa.py
src/: CMakeLists.txt
src/models/: CMakeLists.txt  model.cpp
src/python/: CMakeLists.txt  setup.py.in
src/python/py/models/: README.md  builder.py  command.txt  export.sh
src/tokenizer/: CMakeLists.txt
test/python/: _test_utils.py  requirements.txt  test_onnxruntime_genai.py  test_onnxruntime_genai_e2e.py  test_onnxruntime_genai_phi2.py
